fixed button cursor, fixed vsh for siingle pin when in dark mode

--- a/frontend/src/components/Pins/SinglePin.css
+++ b/frontend/src/components/Pins/SinglePin.css
@@ -23,7 +23,7 @@
 }
 
 #back-button {
-  margin-bottom: 15px;
+  margin-bottom: 14px;
 }
 
 #back-link {
